--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "mensa",
-    "short_name": "mensa",
+    "name": "micro-mensa",
+    "short_name": "micro-mensa",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
