--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "mensa",
-    "short_name": "mensa",
+    "name": "micro-mensa",
+    "short_name": "micro-mensa",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#ffffff",
+    "theme_color": "#000000",
     "description": "A lightweight mensa application",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
