--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: any
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.13.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   openapi_generator: ^5.0.2
