--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,25 +37,25 @@ dependencies:
   cupertino_icons: ^1.0.2
   weekly_date_picker: ^1.3.2
   dynamic_color: ^1.6.8
-  openapi_generator_annotations: ^4.11.0
+  openapi_generator_annotations: ^5.0.2
   mensa_api:
     path: api
   card_loading: ^0.3.0
   intl: any
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.13.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  openapi_generator: ^4.11.0
+  openapi_generator: ^5.0.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
